manifests/seraphim/prod/radarr/Deployment-oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/instance: oauth2-proxy-radarr
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: radarr
    app.kubernetes.io/version: v7.15.1
  name: oauth2-proxy
  namespace: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: oauth2-proxy-radarr
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: authentication-proxy
        app.kubernetes.io/instance: oauth2-proxy-radarr
        app.kubernetes.io/name: oauth2-proxy
        app.kubernetes.io/part-of: radarr
        app.kubernetes.io/version: v7.15.1
    spec:
      containers:
        - args:
            - --http-address=0.0.0.0:8080
            - --metrics-address=0.0.0.0:8081
            - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
            - --upstream-timeout=120s
            - --skip-auth-route=^/api/v3
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.1
          name: oauth2-proxy
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/oauth2_proxy
              name: oauth2-proxy
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - configMap:
            name: oauth2-proxy
          name: oauth2-proxy
