manifests/seraphim/prod/radarr/Deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: radarr
    app.kubernetes.io/version: 6.2.1
  name: radarr
  namespace: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/part-of: radarr
        app.kubernetes.io/version: 6.2.1
    spec:
      containers:
        - env:
            - name: RADARR__AUTH__METHOD
              value: External
          image: ghcr.io/home-operations/radarr:6.2.1
          name: radarr
          ports:
            - containerPort: 7878
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/media
              name: media
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: media
          nfs:
            path: /mnt/nami-01/media
            readOnly: false
            server: nami.int.scarey.me
