manifests/seraphim/prod/radarr/Service-oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/instance: oauth2-proxy-radarr
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: radarr
    app.kubernetes.io/version: v7.15.2
  name: oauth2-proxy
  namespace: radarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: oauth2-proxy
