manifests/seraphim/prod/radarr/Service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: radarr
    app.kubernetes.io/version: 6.2.1
  name: radarr
  namespace: radarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: radarr
