manifests/seraphim/prod/radarr/HTTPRoute-radarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: radarr
    app.kubernetes.io/version: 6.2.1
  name: radarr
  namespace: radarr
spec:
  hostnames:
    - radarr.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 120s
